--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,10 @@
           class="collapse navbar-collapse justify-content-start"
         >
           <div class="navbar-nav">
-            <a href="#" class="nav-item nav-link">Home</a>
+            <a href="#!" class="nav-item nav-link">Home</a>
             <a href="rent.html" class="nav-item nav-link">Rent</a>
-            <a href="#" class="nav-item nav-link">About Us</a>
-            <a href="#" class="nav-item nav-link">Contact</a>
+            <a href="#about" class="nav-item nav-link">About Us</a>
+            <a href="#contact" class="nav-item nav-link">Contact</a>
           </div>
           <div id="auth-buttons" class="navbar-nav ml-auto action-buttons">
             <div class="nav-item dropdown">
@@ -163,25 +163,19 @@
       <!-- about us section -->
 
       <section
-        class="about-us"
+        id="about"
+        class="about-us pb-5"
         data-aos="fade-up"
         data-aos-delay="100"
         data-aos-duration="600"
       >
         <div class="container about-container">
-          <div class="row">
-            <div class="col-md-6 col-12">
+          <div class="row justify-content-center">
+            <div class="col-md-6 col-12 text-center">
               <h1 class="title">About Us</h1>
-              <p class="paragraph mt-4"
-                >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-                egestas in diam fermentum, vel tristique sagittis elementum.</p
-              >
-            </div>
-            <div class="col-md-6 col-12">
-              <h1 class="title">About Us</h1>
-              <p class="paragraph mt-4"
-                >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-                egestas in diam fermentum, vel tristique sagittis elementum.</p
+              <p class="paragraph mt-4">
+                What is the most important resource we have? It is time. We live in a hectic time where are so many important things have to be done. In order to do everything, our generation needs modern, convenient ways of movement that will be available to everyone. This is the main reason why we founded our company in 2015. Choosing our cars, you value your time and comfort. You set your priorities correctly, 
+                which inevitably leads to the achievement of all your goals, and our cars will help you with that</p
               >
             </div>
           </div>
@@ -201,7 +195,7 @@
           <div class="row card-row">
             <div class="col-lg-4 col-12 card-container">
               <a href="#">
-                <div class="price-card text-center">
+                <div id="economy" class="price-card text-center">
                   <div class="img-container">
                     <img
                       class="card-image"
@@ -211,7 +205,8 @@
                   </div>
                   <h4 class="mt-5 card-title">Economy</h4>
                   <p class="mt-4 card-text"
-                    >lorem ipsum lorem ipsum lorem ipsum</p
+                    >Is your budget limited? An excellent choice for those looking for a budget. Quality and price are perfectly combined here. 
+                    Choose your favorite and enjoy!</p
                   >
                   <h2 class="mt-4 card-tariff">From 10$</h2>
                 </div>
@@ -219,7 +214,7 @@
             </div>
             <div class="col-lg-4 col-12 card-container">
               <a href="#">
-                <div class="price-card text-center">
+                <div id="standard" class="price-card text-center">
                   <div class="img-container">
                     <img
                       class="card-image"
@@ -229,9 +224,10 @@
                   </div>
                   <h4 class="mt-5 card-title">Standard</h4>
                   <p class="mt-4 card-text"
-                    >lorem ipsum lorem ipsum lorem ipsum</p
+                    >Do you like comfort? Or maybe you have planned to go with a large company on a road trip? Then our spacious cars will suit you perfectly.
+                     Fill the simple registration and have fun!</p
                   >
-                  <h2 class="mt-4 card-tariff">From 10$</h2>
+                  <h2 class="mt-4 card-tariff">From 20$</h2>
                 </div>
               </a>
             </div>
@@ -247,9 +243,10 @@
                   </div>
                   <h4 class="mt-5 card-title">Business</h4>
                   <p class="mt-4 card-text"
-                    >lorem ipsum lorem ipsum lorem ipsum</p
+                    >Do you want something unusual and cool at the same time? Don't worry, here you will find wonderful business machines that will satisfy even the most fastidious person. 
+                    Just one click and the car is yours!</p
                   >
-                  <h2 class="mt-4 card-tariff">From 10$</h2>
+                  <h2 class="mt-4 card-tariff">From 50$</h2>
                 </div>
               </a>
             </div>
@@ -273,9 +270,9 @@
                 <img class="offer-icon" src="./img/icon-offer-1.png" alt="" />
               </div>
               <div class="text-container-offer">
-                <h4 class="offer-title">Lorem Ipsum</h4>
+                <h4 class="offer-title">Choose your dream car</h4>
                 <p class="paragraph"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p
+                  >La large selection of cars for every taste and budget.</p
                 >
               </div>
             </div>
@@ -284,9 +281,9 @@
                 <img class="offer-icon" src="./img/icon-offer-1.png" alt="" />
               </div>
               <div class="text-container-offer">
-                <h4 class="offer-title">Lorem Ipsum</h4>
+                <h4 class="offer-title">Fast service</h4>
                 <p class="paragraph"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p
+                  >The fastest car rental process. From registration to handover of keys - 1 day!.</p
                 >
               </div>
             </div>
@@ -297,9 +294,9 @@
                 <img class="offer-icon" src="./img/icon-offer-1.png" alt="" />
               </div>
               <div class="text-container-offer">
-                <h4 class="offer-title">Lorem Ipsum</h4>
+                <h4 class="offer-title">Security</h4>
                 <p class="paragraph"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p
+                  >Modern cars that undergo technical inspection every 2 months.</p
                 >
               </div>
             </div>
@@ -308,9 +305,9 @@
                 <img class="offer-icon" src="./img/icon-offer-1.png" alt="" />
               </div>
               <div class="text-container-offer">
-                <h4 class="offer-title">Lorem Ipsum</h4>
+                <h4 class="offer-title">Bonuses and more</h4>
                 <p class="paragraph"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p
+                  >We provide pleasant bonuses to our regular customers and also offer the opportunity to be the first to rent our new cars.</p
                 >
               </div>
             </div>
@@ -336,59 +333,36 @@
               <div class="carousel-item active">
                 <div class="carousel-content">
                   <p class="paragraph">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book. It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining
-                    essentially unchanged. It was popularised in the 1960s with
+                    I am a true traveler. I like to visit new places, but I like to travel with comfort and to be able to choose by myself where I will go today. The easiest way to do this is with a rented car. Using carRrental, I was able to quickly decide on the choice and received the keys the next day! Thank you very much, without you my trip would not have been so bright.
                   </p>
                   <h2 class="text-center client-name-carousel">
                     Anna Kowalski
                   </h2>
-                  <p class="text-center paragraph">
-                    Lorem ipsum Lorem ipsum Lorem ipsum
-                  </p>
+                  <div style="height: 30px;"></div>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <div class="carousel-content">
                   <p class="paragraph">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
+                    The best rental service! I had to rent a car for a weekend because my friends and I had planned a road trip moths ago. We needed a perfect car for 5 people which will have a lot of free space inside, fast and at a good price. CarRental have a large selection of cars. We quickly found what we needed.
                   </p>
                   <h2 class="text-center client-name-carousel">
-                    Anna Kowalski
+                    Jan Puzio
                   </h2>
-                  <p class="text-center paragraph">
-                    Lorem ipsum Lorem ipsum Lorem ipsum
-                  </p>
+                  <div style="height: 30px;"></div>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <div class="carousel-content">
                   <p class="paragraph">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book. It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining
-                    essentially unchanged. It was popularised in the 1960s with
-                    the release of Letraset sheets containing Lorem Ipsum
-                    passages, and more recently with desktop publishing software
-                    like Aldus PageMaker including versions of Lorem Ipsum.
+                    I am an experienced driver. I have my own car but sometimes I like to test others or I need a car while mine is being repaired. CarRental helps me out not for the first time. I am very grateful to them for their efficiency and professionalism. He does everything quickly and efficiently. All the cars that I rented were in excellent condition.
                   </p>
                   <h2 class="text-center client-name-carousel">
-                    Anna Kowalski
+                    Sylwia Pniewska
                   </h2>
-                  <p class="text-center paragraph">
-                    Lorem ipsum Lorem ipsum Lorem ipsum
-                  </p>
+                  <div style="height: 30px;"></div>
                 </div>
               </div>
             </div>
@@ -439,6 +413,7 @@
 
     <!-- Footer -->
     <footer
+      id="contact"
       class="page-footer font-small blue pt-4 mt-5"
       data-aos="fade-up"
       data-aos-delay="100"
@@ -455,8 +430,10 @@
               ><h5 class="navbar-brand">Car<b>RENTAL</b></h5></a
             >
             <p class="paragraph"
-              >Here you can use rows and columns to organize your footer
-              content.</p
+              >Email: car-rental@gmail.com</p
+            >
+            <p class="paragraph"
+              >Tel: 333456788</p
             >
           </div>
           <!-- Grid column -->
@@ -476,10 +453,7 @@
                 <a href="rent.html">Rent</a>
               </li>
               <li>
-                <a href="#!">About Us</a>
-              </li>
-              <li>
-                <a href="#!">Contact</a>
+                <a href="#about">About Us</a>
               </li>
             </ul>
           </div>
