--- a/src/html/myrent.html
+++ b/src/html/myrent.html
@@ -10,17 +10,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/main.css" />
-    <link
-      rel="stylesheet"
-      media="screen"
-      href="https://fontlibrary.org/face/tt-norms-medium"
-      type="text/css"
-    />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/tt-norms-medium" type="text/css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"
-    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"
@@ -32,19 +24,11 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a href="index.html" class="navbar-brand">Car<b>RENTAL</b></a>
-        <button
-          type="button"
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#navbarCollapse"
-        >
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Collection of nav links, forms, and other content for toggling -->
-        <div
-          id="navbarCollapse"
-          class="collapse navbar-collapse justify-content-start"
-        >
+        <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
           <div class="navbar-nav">
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="rent.html" class="nav-item nav-link">Rent</a>
@@ -52,22 +36,11 @@
           </div>
           <div id="auth-buttons" class="navbar-nav ml-auto action-buttons">
             <div class="nav-item dropdown">
-              <a
-                href="#"
-                data-toggle="dropdown"
-                class="nav-link dropdown-toggle mr-4"
-                >Login</a
-              >
+              <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle mr-4">Login</a>
               <div class="dropdown-menu action-form">
                 <form id="login-form" name="login">
                   <div class="form-group">
-                    <input
-                      name="email"
-                      type="email"
-                      class="form-control"
-                      placeholder="Email"
-                      required="required"
-                    />
+                    <input name="email" type="email" class="form-control" placeholder="Email" required="required" />
                   </div>
                   <div class="form-group">
                     <input
@@ -78,11 +51,7 @@
                       required="required"
                     />
                   </div>
-                  <input
-                    type="submit"
-                    class="btn btn-primary btn-block"
-                    value="Login"
-                  />
+                  <input type="submit" class="btn btn-primary btn-block" value="Login" />
                   <!-- <div class="text-center mt-2">
                     <a href="#">Forgot Your password?</a>
                   </div> -->
@@ -91,25 +60,12 @@
               </div>
             </div>
             <div class="nav-item dropdown">
-              <a
-                href="#"
-                data-toggle="dropdown"
-                class="btn btn-primary dropdown-toggle sign-up-btn"
-                >Sign up</a
-              >
+              <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn">Sign up</a>
               <div class="dropdown-menu action-form">
                 <form id="signup-form" name="signup">
-                  <p class="hint-text"
-                    >Fill in this form to create your account!</p
-                  >
+                  <p class="hint-text">Fill in this form to create your account!</p>
                   <div class="form-group">
-                    <input
-                      name="email"
-                      type="email"
-                      class="form-control"
-                      placeholder="Email"
-                      required="required"
-                    />
+                    <input name="email" type="email" class="form-control" placeholder="Email" required="required" />
                   </div>
                   <div class="form-group">
                     <input
@@ -131,15 +87,11 @@
                   </div>
                   <div class="form-group">
                     <label class="form-check-label"
-                      ><input type="checkbox" required="required" /> I accept
-                      the <a href="#">Terms &amp; Conditions</a></label
+                      ><input type="checkbox" required="required" /> I accept the
+                      <a href="#">Terms &amp; Conditions</a></label
                     >
                   </div>
-                  <input
-                    type="submit"
-                    class="btn btn-primary btn-block"
-                    value="Sign up"
-                  />
+                  <input type="submit" class="btn btn-primary btn-block" value="Sign up" />
                 </form>
                 <p name="signup" class="paragraph"></p>
               </div>
@@ -149,7 +101,7 @@
       </nav>
     </header>
 
-    </main>
+    <main class="my-rent-page"></main>
 
     <!-- Footer -->
     <footer
@@ -198,7 +150,7 @@
       </div>
       <!-- Footer Links -->
 
-      <!-- Copyright --> 
+      <!-- Copyright -->
       <div class="footer-copyright text-center py-3"
         >© 2020 Copyright:
         <a href="index.html"> CarRENTAL</a>
@@ -233,6 +185,6 @@
     ></script>
     <script src="../js/firebase.js"></script>
     <script src="../js/auth.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="../js/myrent.js"></script>
   </body>
 </html>
