--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <!-- Collection of nav links, forms, and other content for toggling -->
         <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
           <div class="navbar-nav">
-            <a href="#!" class="nav-item nav-link">Home</a>
+            <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="rent.html" class="nav-item nav-link">Rent</a>
             <a href="myrent.html" class="nav-item nav-link">My rent</a>
           </div>
@@ -110,7 +110,7 @@
                 important things have to be done. In order to do everything, our generation needs modern, convenient
                 ways of movement that will be available to everyone. This is the main reason why we founded our company
                 in 2015. Choosing our cars, you value your time and comfort. You set your priorities correctly, which
-                inevitably leads to the achievement of all your goals, and our cars will help you with that</p
+                inevitably leads to the achievement of all your goals, and our cars will help you with that.</p
               >
             </div>
           </div>
@@ -185,7 +185,7 @@
               </div>
               <div class="text-container-offer">
                 <h4 class="offer-title">Choose your dream car</h4>
-                <p class="paragraph">La large selection of cars for every taste and budget.</p>
+                <p class="paragraph">Large selection of cars for every taste and budget.</p>
               </div>
             </div>
             <div class="col-lg-6 col-12 offer-container">
@@ -194,7 +194,7 @@
               </div>
               <div class="text-container-offer">
                 <h4 class="offer-title">Fast service</h4>
-                <p class="paragraph">The fastest car rental process. From registration to handover of keys - 1 day!.</p>
+                <p class="paragraph">The fastest car rental process. From registration to handover of keys - 1 day!</p>
               </div>
             </div>
           </div>
